Revert "添加个人对智能指针的总结"
This reverts commit 651cfdc7

--- a/Things/动态内存与智能指针.md
+++ b/Things/动态内存与智能指针.md
@@ -145,11 +145,5 @@ while(q != p) alloc.destroy(--q);   //释放我们构造的string
 
 ## 小结
 
-**智能指针和动态内存小结**  
-![智能指针和动态内存小结](image/智能指针和动态内存小结.png)
-
-
-## 术语表
-
-**智能指针和动态内存术语表**  
-![智能指针和动态内存术语表](image/智能指针和动态内存术语表.png)
+**智能指针和内存的小结**  
+![智能指针和内存的小结](image/智能指针和内存的小结.png)
